# nanogui-server2

./: CMakeLists.txt  README.rst  client-nowin.json  client.json  dict.h  flexdemo.cpp  flexsample.cpp  flextest.cpp  guieditor.cpp  guieditor.h  imagestash_test.cpp  nanovg-colorfont-atlas.cpp  ngserver.cpp  nslabels.cpp
ext/nanovg/: CMakeLists.txt
ext/nanovg/example/: example_fbo  example_gl3
ext/nanovg/src/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl_utils.h
include/nanogui/: button.h  common.h  formhelper.h  label.h  layout.h  menu.h  popupbutton.h  screen.h  scrollpanel.h  split.h  textbox.h  theme.h  vector.h  widget.h  window.h
src/: .example1.cpp.swp  .window.cpp.swp  button.cpp  common.cpp  darwin.mm  example1.cpp  example2.cpp  example3.cpp  example_icons.cpp  label.cpp  layout.cpp  menu.cpp  popupbutton.cpp  screen.cpp  scrollpanel.cpp  textbox.cpp  theme.cpp  treeview.cpp  widget.cpp  window.cpp
